fix: fixed spacing issue with navbar and contents

--- a/src/app/pages/book/book.component.scss
+++ b/src/app/pages/book/book.component.scss
@@ -1,7 +1,6 @@
 .booking {
   width: 100%;
   display: flex;
-  margin-top: 56px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
