--- a/src/app/pages/contact-us/contact-us.component.scss
+++ b/src/app/pages/contact-us/contact-us.component.scss
@@ -1,7 +1,6 @@
 .contact-us-space {
   width: 100%;
   display: flex;
-  margin-top: 56px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
