--- a/src/app/pages/sign-up/sign-up.component.scss
+++ b/src/app/pages/sign-up/sign-up.component.scss
@@ -1,7 +1,6 @@
 .signUp-container {
   width: 100%;
   display: flex;
-  margin-top: 56px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
