--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,8 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+
+body { 
+  padding-top: 65px; 
+}
